--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -53,7 +53,7 @@
           font-size: 72px;
         }
         p {
-          color: gray;
+          color: white;
           font-size: 20px;
         }
 
