--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -63,6 +63,7 @@
           border: none;
           border-radius: 10px;
           padding: 10px;
+          margin-bottom: 30px;
           width: 200px;
           cursor: pointer;
         }
