--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,14 +1,9 @@
 .hero {
-  position: relative;
-  background-image: linear-gradient(
-    to top,
-    #aed9e0,
-    #78a3b5,
-    #4b6f8b,
-    #293e5f,
-    #111132
-  );
+  background-image: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
+    url(public/mades11.jpg);
   height: 100vh;
+  background-size: cover;
+  // background-position: center;
 
   .wrapper {
     max-width: 29.125rem;
