--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,26 +1,42 @@
 .hero {
+  position: relative;
   background-image: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
-    url(public/mades11.jpg);
+    url(public/madesHero.jpg);
   height: 100vh;
   background-size: cover;
-  // background-position: center;
+  //? background-position: center; Colocar esto cuando hagas el responsive
 
   .wrapper {
-    max-width: 29.125rem;
     height: 100%;
     margin: auto;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
 
     .textContainer {
+      padding-left: 5em;
+      padding-top: 15em;
+
       h1 {
-        font-size: 5.5rem;
+        font-size: 10.5rem;
       }
 
       h2 {
         font-size: 2.5rem;
+      }
+
+      p {
+        max-width: 48rem;
+        font-size: 1.1rem;
+      }
+
+      .arrowicon {
+        background: #e91e63;
+        width: 70px;
+        min-height: 70px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2%;
+        cursor: pointer;
       }
     }
 
