--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -60,12 +60,11 @@
 
         button {
           background-color: orange;
-          border: none;
-          border-radius: 10px;
-          padding: 10px;
-          margin-bottom: 30px;
-          width: 200px;
-          cursor: pointer;
+          // border: none;
+          // border-radius: 10px;
+          // padding: 10px;
+          // margin-bottom: 30px;
+          // width: 200px;
         }
       }
     }
