--- a/src/components/quienesSomos/QuienesSomos.scss
+++ b/src/components/quienesSomos/QuienesSomos.scss
@@ -12,13 +12,13 @@
     flex-direction: column;
     align-items: center;
 
-    .principalTitle {
+    .title {
       display: flex;
       align-items: center;
       gap: 50px;
 
       h1 {
-        font-size: 56px;
+        font-size: 95px;
         font-weight: 100;
         padding-top: 5rem;
       }
@@ -29,9 +29,10 @@
     position: absolute;
     content: "";
     width: 2px;
-    height: 100px;
+    height: 70px;
     left: 50%;
     margin-left: 1px;
+    margin-top: 10px;
     background-color: #da9f5b;
   }
 
@@ -59,6 +60,22 @@
         color: #555555;
         font-size: 1.3rem;
         margin: 0 0 16px;
+      }
+      .textItem {
+        font-size: 1.5rem;
+        margin: 0 0 16px;
+        li {
+          margin-bottom: 4px;
+          color: #33211d;
+        }
+      }
+      button {
+        background-color: orange;
+        // border: none;
+        // border-radius: 10px;
+        // padding: 10px;
+        // margin-bottom: 30px;
+        // width: 200px;
       }
     }
     img {
