--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,5 +1,4 @@
 .hero {
-  position: relative;
   background-image: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
     url(public/madesHero.jpg);
   height: 100vh;
@@ -7,11 +6,13 @@
   //? background-position: center; Colocar esto cuando hagas el responsive
 
   .wrapper {
+    position: relative;
     height: 100%;
+    max-width: 1366px;
     margin: auto;
 
     .textContainer {
-      padding-left: 10em;
+      // padding-left: 10em;
       padding-top: 17em;
 
       h1 {
@@ -43,7 +44,7 @@
     .social {
       position: absolute;
       top: 40px; /* Ajusta la distancia desde la parte superior */
-      right: 70px; /* Ajusta la distancia desde la izquierda */
+      right: 0; /* Ajusta la distancia desde la izquierda */
       display: flex;
       gap: 20px;
       font-size: 1.7rem;
