--- a/src/components/proyectos/Proyectos.scss
+++ b/src/components/proyectos/Proyectos.scss
@@ -1,5 +1,6 @@
 .proyectos {
   position: relative;
+
   .progress {
     position: sticky;
     top: 0;
@@ -14,6 +15,21 @@
       height: 10px;
       background-color: white;
     }
+
+    h1 {
+      padding-top: 5rem;
+    }
+  }
+
+  .progress::before {
+    position: absolute;
+    content: "";
+    width: 2px;
+    height: 70px;
+    left: 50%;
+    margin-left: 1px;
+    margin-top: 10px;
+    background-color: #da9f5b;
   }
 
   .container {
@@ -49,6 +65,7 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        margin-bottom: 25rem;
 
         h2 {
           font-size: 72px;
@@ -60,11 +77,7 @@
 
         button {
           background-color: orange;
-          // border: none;
-          // border-radius: 10px;
-          // padding: 10px;
-          // margin-bottom: 30px;
-          // width: 200px;
+          margin-bottom: 30px;
         }
       }
     }
