--- a/src/App.scss
+++ b/src/App.scss
@@ -32,8 +32,9 @@ html {
 }
 
 body {
-  background-color: #8484bd;
+  background-color: #d7d5cd;
   color: lightgray;
+  // linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
 }
 
 section {
