--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,9 +1,15 @@
+@import "../../App.scss";
+
 .hero {
   background-image: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
     url(public/madesHero.jpg);
   height: 100vh;
   background-size: cover;
-  //? background-position: center; Colocar esto cuando hagas el responsive
+  background-position: center;
+
+  // @include mobile {
+  //   width: 100%;
+  // }
 
   .wrapper {
     position: relative;
@@ -14,7 +20,7 @@
 
     .social {
       position: absolute;
-      top: 10px; /* Ajusta la distancia desde la parte superior */
+      top: 25px; /* Ajusta la distancia desde la parte superior */
       right: 2%; /* Ajusta la distancia desde la izquierda */
       display: flex;
       gap: 20px;
@@ -26,8 +32,15 @@
     }
 
     .textContainer {
-      padding-top: 17em;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      height: 100%;
       max-width: 48rem;
+      @include mobile {
+        text-align: center;
+      }
 
       h1 {
         font-size: clamp(5rem, 3.0301rem + 9.6386vi, 10.5rem);
@@ -51,6 +64,10 @@
         justify-content: center;
         margin-top: 2%;
         cursor: pointer;
+
+        @include mobile {
+          display: none;
+        }
       }
     }
   }
