--- a/src/components/sidebar/SideBar.scss
+++ b/src/components/sidebar/SideBar.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .sidebar {
   .background {
     position: fixed;
@@ -6,7 +8,10 @@
     left: 0;
     bottom: 0;
     width: 300px;
-    background: #fff;
+    background-color: #fff;
+
+    @include mobile {
+    }
 
     .links {
       position: absolute;
