--- a/src/components/quienesSomos/QuienesSomos.scss
+++ b/src/components/quienesSomos/QuienesSomos.scss
@@ -57,7 +57,7 @@
       flex-direction: column;
       gap: 20px;
       // max-width: 400px;
-      padding: 48px 12px 48px 0;
+      padding: 48px 12px 48px 12px;
       // background-color: aqua;
       @include tablet {
         max-width: 800px; //!Observar esto para la resolución de table
@@ -80,7 +80,7 @@
         li {
           font-size: 20px;
           display: flex;
-          gap: 20px;
+          gap: 8px;
           align-items: center;
           // margin-bottom: 4px;
           color: #f80c7e;
@@ -96,10 +96,10 @@
       }
     }
     img {
-      max-width: 39%;
+      max-width: 37%;
       // min-height: 500px;
       display: block;
-      padding: 50px 42px 0 32px;
+      padding: 50px 32px 0 32px;
     }
   }
 }
