--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -12,7 +12,10 @@
     height: 100%;
     max-width: 1366px;
     margin: auto;
-    padding: 0 2%;
+    padding: 0 12px;
+    // @include tablet {
+    //   max-width: 880px;
+    // }
 
     .hero__social {
       position: absolute;
