--- a/src/components/quienesSomos/QuienesSomos.scss
+++ b/src/components/quienesSomos/QuienesSomos.scss
@@ -6,9 +6,6 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  // justify-content: center;
-  // align-items: center;
-  // align-content: center;
   position: relative;
   max-width: 1366px;
 
@@ -19,6 +16,10 @@
   .titleAbout {
     display: flex;
     justify-content: center;
+
+    @include mobile {
+      text-align: center;
+    }
 
     // margin-bottom: 5%;
     // text-align: center; colcarlo en el resposive para celular
@@ -59,9 +60,9 @@
       // max-width: 400px;
       padding: 48px 12px 48px 12px;
       // background-color: aqua;
-      @include tablet {
-        max-width: 800px; //!Observar esto para la resolución de table
-      }
+      // @include tablet {
+      //   max-width: 880px; //!Observar esto para la resolución de table
+      // }
 
       h1 {
         font-size: 40px;
@@ -100,6 +101,9 @@
       // min-height: 500px;
       display: block;
       padding: 50px 32px 0 32px;
+      @include tablet {
+        display: none;
+      }
     }
   }
 }
