--- a/src/components/quienesSomos/QuienesSomos.scss
+++ b/src/components/quienesSomos/QuienesSomos.scss
@@ -58,11 +58,14 @@
       flex-direction: column;
       gap: 20px;
       // max-width: 400px;
-      padding: 48px 12px 48px 12px;
+      padding: 48px 12px;
       // background-color: aqua;
       // @include tablet {
       //   max-width: 880px; //!Observar esto para la resolución de table
       // }
+      @include tablet {
+        padding: 15px 12px;
+      }
 
       h1 {
         font-size: 40px;
