--- a/src/components/noticias/Noticias.scss
+++ b/src/components/noticias/Noticias.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   position: relative;
   max-width: 1366px;
-  margin: auto;
+  margin: 0 auto;
 
   .title {
     display: flex;
