--- a/src/components/noticias/CardNoticias.scss
+++ b/src/components/noticias/CardNoticias.scss
@@ -1,25 +1,40 @@
-// Estilos.scss
-// Estilos.scss
+img {
+  max-width: 100%;
+}
 
 .container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 20px;
+  color: rgb(250, 250, 250);
 
   .card-size-1 {
-    width: 40%;
-    height: 10%;
+    width: 500px;
+    // background-color: aqua;
   }
 
   .card-size-2 {
-    width: 25%;
-    height: 10%;
+    width: 300px;
+    // height: 10%;
+    // flex-grow: 6;
   }
 
   .card-size-3 {
-    width: 25%;
-    height: 10%;
+    width: 300px;
+    // height: 10%;
+    // flex-grow: 0.5;
+  }
+  .card-size-4 {
+    width: 300px;
+    // height: 10%;
+    // flex-grow: 0.5;
+  }
+  .card-size-5 {
+    width: 300px;
+    // height: 10%;
+    // flex-grow: 0.5;
   }
 }
 
