--- a/src/components/noticias/CardNoticias.scss
+++ b/src/components/noticias/CardNoticias.scss
@@ -3,36 +3,56 @@ img {
 }
 
 .container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 20px;
-  color: rgb(250, 250, 250);
+  // width: 1300px;
+  display: grid;
+  grid-template-areas:
+    "card-size-1 card-size-1  card-size-2 card-size-3"
+    "card-size-1 card-size-1  card-size-4 card-size-5";
+  gap: 15px;
+  padding: 0 12px;
 
   .card-size-1 {
-    width: 500px;
+    // width: 100%;
+    grid-area: card-size-1;
+    font-size: 17px;
+    // line-height: 2.375rem;
     // background-color: aqua;
+    // width: 600px;
   }
 
   .card-size-2 {
-    width: 300px;
-    // height: 10%;
+    // width: 100%;
+    // background-color: rgb(81, 244, 60);
+    grid-area: card-size-2;
+    font-size: 12px;
     // flex-grow: 6;
+    width: 300px;
   }
 
   .card-size-3 {
+    // width: 100%;
+    grid-area: card-size-3;
+    font-size: 12px;
     width: 300px;
+
     // height: 10%;
     // flex-grow: 0.5;
   }
   .card-size-4 {
+    // width: 100%;
+    grid-area: card-size-4;
+    font-size: 12px;
     width: 300px;
+
     // height: 10%;
     // flex-grow: 0.5;
   }
   .card-size-5 {
+    // width: 100%;
+    grid-area: card-size-5;
+    font-size: 12px;
     width: 300px;
+
     // height: 10%;
     // flex-grow: 0.5;
   }
