--- a/src/components/noticias/CardNoticias.scss
+++ b/src/components/noticias/CardNoticias.scss
@@ -3,7 +3,6 @@ img {
 }
 
 .container {
-  // width: 1300px;
   display: grid;
   grid-template-areas:
     "card-size-1 card-size-1  card-size-2 card-size-3"
@@ -11,50 +10,70 @@ img {
   gap: 15px;
   padding: 0 12px;
 
+  .card-container {
+    border-radius: 1rem;
+    box-shadow: 0px 10px 8px #999;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    color: black;
+    height: fit-content;
+
+    .card-img {
+      // width: 100%;
+      border-radius: 1rem 1rem 0 0;
+    }
+
+    .card-title {
+      margin: 0.5rem 5%;
+    }
+    .card-description {
+      margin: 0.5rem 5%;
+    }
+
+    .card-btn {
+      text-align: center;
+      width: 100px;
+      border-radius: 5px;
+      padding: 0.5rem 1rem;
+      background-color: #2563eb;
+      color: white;
+      text-decoration: none;
+      margin: 0.5rem 5%;
+    }
+  }
+
   .card-size-1 {
-    // width: 100%;
     grid-area: card-size-1;
-    font-size: 17px;
-    // line-height: 2.375rem;
-    // background-color: aqua;
-    // width: 600px;
+    img {
+      height: 280px;
+    }
   }
 
   .card-size-2 {
-    // width: 100%;
-    // background-color: rgb(81, 244, 60);
     grid-area: card-size-2;
-    font-size: 12px;
-    // flex-grow: 6;
-    width: 300px;
+    img {
+      height: 135px;
+    }
   }
 
   .card-size-3 {
-    // width: 100%;
     grid-area: card-size-3;
-    font-size: 12px;
-    width: 300px;
-
-    // height: 10%;
-    // flex-grow: 0.5;
+    img {
+      height: 135px;
+    }
   }
   .card-size-4 {
-    // width: 100%;
     grid-area: card-size-4;
-    font-size: 12px;
-    width: 300px;
-
-    // height: 10%;
-    // flex-grow: 0.5;
+    img {
+      height: 135px;
+    }
   }
   .card-size-5 {
-    // width: 100%;
     grid-area: card-size-5;
-    font-size: 12px;
-    width: 300px;
-
-    // height: 10%;
-    // flex-grow: 0.5;
+    img {
+      height: 135px;
+    }
   }
 }
 
