--- a/src/components/noticias/CardNoticias.scss
+++ b/src/components/noticias/CardNoticias.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 img {
   max-width: 100%;
 }
@@ -11,19 +13,24 @@ img {
   padding: 48px 12px 0 12px;
   height: 100%;
 
+  @include tablet {
+    grid-template-areas:
+      "card-size-1 card-size-1  card-size-2"
+      "card-size-3 card-size-4  card-size-5";
+  }
+
+  @include mobile {
+    grid-template-areas:
+      "card-size-1 card-size-1 "
+      "card-size-2 card-size-3"
+      "card-size-4 card-size-5";
+  }
+
   .card-container {
-    // border-radius: 1rem;
-    // box-shadow: 0px 10px 8px #999;
     display: flex;
     flex-direction: column;
-    // background-color: white;
     color: #fff;
     height: fit-content;
-
-    // .card-img {
-    //   // width: 100%;
-    //   border-radius: 1rem 1rem 0 0;
-    // }
 
     .card-title {
       margin: 0.5% 0;
@@ -43,6 +50,12 @@ img {
     grid-area: card-size-1;
     img {
       height: 350px;
+      @include tablet {
+        height: 325px;
+      }
+      @include tablet {
+        height: 255px;
+      }
     }
   }
 
@@ -88,5 +101,3 @@ img {
     }
   }
 }
-
-// ... y así sucesivamente para los tamaños que necesites
