--- a/src/components/noticias/Noticias.scss
+++ b/src/components/noticias/Noticias.scss
@@ -9,6 +9,10 @@
   max-width: 1366px;
   margin: 0 auto;
 
+  @include tablet {
+    height: auto;
+  }
+
   .title {
     display: flex;
     justify-content: center;
