--- a/src/components/noticias/Noticias.scss
+++ b/src/components/noticias/Noticias.scss
@@ -1,6 +1,6 @@
 @import "../../App.scss";
 
-.newsContainer {
+.news-container {
   background: linear-gradient(180deg, #0c0c1d, #111132);
   height: 100%;
   display: flex;
@@ -26,7 +26,6 @@
       font-weight: 100;
       padding-top: 3rem;
     }
-
     &::after {
       position: absolute;
       content: "";
