--- a/src/components/quienesSomos/QuienesSomos.scss
+++ b/src/components/quienesSomos/QuienesSomos.scss
@@ -13,16 +13,13 @@
     height: auto;
   }
 
-  .titleAbout {
+  .about__title {
     display: flex;
     justify-content: center;
 
     @include mobile {
-      text-align: center;
+      text-align: center; // Mover al mixin mobile para centrar el texto en dispositivos móviles
     }
-
-    // margin-bottom: 5%;
-    // text-align: center; colcarlo en el resposive para celular
 
     h1 {
       font-size: clamp(2.5rem, 1.2688rem + 6.0241vi, 5.9375rem);
@@ -42,27 +39,21 @@
     }
   }
 
-  .listAbout {
+  .about__list {
     display: flex;
     justify-content: space-between;
-    // background-color: aqua;
 
     @include tablet {
       flex-direction: column;
       align-items: center;
-      // justify-content: start;
     }
 
-    .textAbout {
+    .about__text {
       display: flex;
       flex-direction: column;
       gap: 20px;
-      // max-width: 400px;
       padding: 48px 12px;
-      // background-color: aqua;
-      // @include tablet {
-      //   max-width: 880px; //!Observar esto para la resolución de table
-      // }
+
       @include tablet {
         padding: 15px 12px;
       }
@@ -70,15 +61,18 @@
       h1 {
         font-size: 40px;
       }
+
       h2 {
         font-size: 20px;
         color: #33211d;
       }
+
       p {
         color: #555555;
         font-size: 18px;
       }
-      .textItem {
+
+      .about__text-item {
         font-size: 1.6rem;
 
         li {
@@ -86,24 +80,26 @@
           display: flex;
           gap: 8px;
           align-items: center;
-          // margin-bottom: 4px;
           color: #f80c7e;
+
           svg {
             color: #fff;
           }
         }
       }
+
       button {
         padding: 0.5em 1.5em;
         margin: 0.5em 0 0;
         background-color: orange;
       }
     }
+
     img {
       max-width: 37%;
-      // min-height: 500px;
       display: block;
       padding: 50px 32px 0 32px;
+
       @include tablet {
         display: none;
       }
