--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  background-color: #d7d5cd;
+  background-color: #e5a253;
   color: lightgray;
   // linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
 }
@@ -30,6 +30,21 @@ body {
 @mixin desktop {
   @media (max-width: 1366px) {
     @content;
+  }
+}
+// line effect
+@mixin lineEffect() {
+  &:after {
+    content: "";
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    transition: all 0.6s ease;
+  }
+  &:hover:after {
+    width: 100%;
+    background: #dd0808;
   }
 }
 
