--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,9 @@ body {
 }
 // line effect
 @mixin lineEffect() {
+  position: relative;
   &:after {
+    position: absolute;
     content: "";
     display: block;
     margin: auto;
@@ -47,6 +49,24 @@ body {
     background: #23aea8;
   }
 }
+
+// @mixin lineEffect() {
+//   position: relative;
+//   &:after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     bottom: -10px; // Ajusta la posición según sea necesario
+//     left: 0;
+//     height: 3px;
+//     width: 0px;
+//     background: #23aea8;
+//     transition: all 0.6s ease;
+//   }
+//   &:hover::after {
+//     width: 100%;
+//   }
+// }
 
 section {
   height: 100vh;
