Se agregaron variables a los estilos

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,11 @@ body {
   }
 }
 
+// @mixin h2Styles() {
+//   font-size: clamp(1.5625rem, 1.2267rem + 1.6429vi, 2.5rem);
+//   color: #e25b46;
+// }
+
 // @mixin lineEffect() {
 //   position: relative;
 //   &:after {
