--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,8 +1,16 @@
 @import "../../App.scss";
+// Colores
+$hero-gradient: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65));
+$icon-color: #fff;
+$Arrow-color: #e91e63;
+
+// Tamaños de texto
+$h1-size: clamp(5rem, 3.0301rem + 9.6386vi, 10.5rem);
+$h2-size: clamp(1.25rem, 0.8023rem + 2.1906vi, 2.5rem);
+$paragraph-size: clamp(1rem, 0.8209rem + 0.8762vi, 1.5rem);
 
 .hero {
-  background-image: linear-gradient(rgba(9, 0, 77, 0.65), rgba(9, 0, 77, 0.65)),
-    url(public/madesHero.jpg);
+  background-image: $hero-gradient, url(public/madesHero.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -13,20 +21,17 @@
     max-width: 1366px;
     margin: auto;
     padding: 0 12px;
-    // @include tablet {
-    //   max-width: 880px;
-    // }
 
     .hero__social {
       position: absolute;
-      top: 25px; /* Ajusta la distancia desde la parte superior */
-      right: 2%; /* Ajusta la distancia desde la izquierda */
+      top: 25px;
+      right: 2%;
       display: flex;
       gap: 20px;
       font-size: 1.7rem;
 
       a {
-        color: #fff;
+        color: $icon-color;
         // line effect
         @include lineEffect();
       }
@@ -44,19 +49,19 @@
       }
 
       h1 {
-        font-size: clamp(5rem, 3.0301rem + 9.6386vi, 10.5rem);
+        font-size: $h1-size;
       }
 
       h2 {
-        font-size: clamp(1.25rem, 0.8023rem + 2.1906vi, 2.5rem);
+        font-size: $h2-size;
       }
 
       p {
-        font-size: clamp(1rem, 0.8209rem + 0.8762vi, 1.5rem);
+        font-size: $paragraph-size;
       }
 
       .textContainer__arrowIcon {
-        background: #e91e63;
+        background: $Arrow-color;
         width: 70px;
         min-height: 70px;
         border-radius: 50%;
